@@ -19,16 +19,16 @@ import java.util.stream.Collectors;
 @Service
 public class WorkflowUtil {
 
-    @Autowired
-    private ServiceRequestRepository repository;
+    private final ServiceRequestRepository repository;
+    private final ObjectMapper mapper;
+    private final Configuration configs;
 
     @Autowired
-    private ObjectMapper mapper;
-
-    @Autowired
-    private Configuration configs;
-
-
+    public WorkflowUtil(ServiceRequestRepository repository, ObjectMapper mapper, Configuration configs) {
+        this.repository = repository;
+        this.mapper = mapper;
+        this.configs = configs;
+    }
 
     /**
     * Searches the BussinessService corresponding to the businessServiceCode
@@ -143,7 +143,7 @@ public class WorkflowUtil {
             List<String> userIds = null;
 
             if(!CollectionUtils.isEmpty(processInstance.getAssignes())){
-                userIds = processInstance.getAssignes().stream().map(User::getUuid).collect(Collectors.toList());
+                userIds = processInstance.getAssignes().stream().map(User::getUuid).toList();
             }
 
             Workflow workflow = Workflow.builder()
